# btc-flow

./: .env.TEMPLATE  .gitignore  .pre-commit-config.yaml  Makefile  README.md  Taskfile.yaml  devbox.json  pyproject.toml
.github/: pull_request_template.md
.github/actions/: composite_vs_reusable.md
.github/actions/setup-python/: action.yaml
.github/workflows/: call-build.yaml  composite-checks.yaml  consume-composite-action.yaml  docker-build-reusable.yaml  docker-push-reusable.yaml  invoke-docker-workflows.yaml  reusable-build.yaml  stale-handler.yaml
charts/: kind-config.yaml.TEMPLATE
charts/airflow/: Chart.yaml  Taskfile.yaml  values.yaml
charts/grafana/: .gitignore  Chart.yaml  Taskfile.yaml  values.yaml
charts/grafana/templates/: _helpers.tpl  sts.yaml  svc.yaml
charts/postgresql/: Chart.yaml  Taskfile.yaml  values.yaml
charts/postgresql/templates/: _helpers.tpl  sts.yaml
dags/: mempool_etl.py
docker/: .dockerignore  Dockerfile  Taskfile.yaml  docker-compose.yaml
docker/scripts/: build-airflow-image  compose-down  compose-down-reset  compose-up  constants
flowchart/: .gitignore  Chart.yaml  Makefile  Taskfile.yaml  af.values.yaml  namespace.yaml  values.yaml
flowchart/templates/: NOTES.txt  _helpers.tpl  airflow-deployment.yaml  dags-configmap.yaml  postgres-airflow.yaml  postgres-data.yaml  secrets.yaml
flowcharts/: .gitignore  Makefile
flowcharts/airflow/: Chart.yaml  values.yaml
flowcharts/postgresql/: Chart.yaml  Taskfile.yaml
flowcharts/postgresql/templates/: svc.yaml
src/btc_flow/: __init__.py  __main__.py
src/btc_flow/core/: config.py  tools.py
src/btc_flow/dag/: callables.py  tasks.py
src/btc_flow/etl/: extract.py  load.py  models.py  transform.py  validate.py
src/conf/: __init__.py  config.yaml  hydra-settings.yaml
src/conf/db/: csv.yaml  postgres.yaml
src/conf/hydra/job_logging/: custom-logging.yaml
tests/: conftest.py
tests/integration/: test_extract.py
tests/unit/: test_load.py  test_load_postgres.py  test_transform.py  test_validate.py
