[project]
name = "btc-flow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "thanakara", email = "thkaranikolopoulos@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "apache-airflow-providers-standard>=1.12.1",
    "apache-airflow[core]>=3.1.8",
    "asyncpg>=0.31.0",
    "hydra-core>=1.3.2",
    "pandas>=3.0.1",
    "psycopg2-binary>=2.9.11",
    "requests>=2.32.5",
]

[project.scripts]
flow = "btc_flow.__main__:main"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "ruff>=0.15.7",
]

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = [".git", ".vscode"]

[tool.ruff.lint]
select = [
    "I", "B", "C", "E", "F", "W", "B9", "UP", "PL"
    ]
ignore = [
    "W191", "E731", "B905", "PLR0913", "PLC0414"
]

[tool.ruff.lint.isort]
from-first = false
length-sort = true
lines-between-types = 1
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
